# bindep

./: .coveragerc  .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  MANIFEST.in  NEWS.rst  README.md  README.rst  other-requirements.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
bindep/: __init__.py  depends.py  main.py  support_py26.py
bindep/releasenotes/notes/: use-distro-library-db71244a0a5cf1dd.yaml
bindep/tests/: test_depends.py  test_main.py
bindep/tests/fixtures/rhelworkstation/etc/: os-release
bindep/tests/fixtures/ubuntu/etc/: os-release
bindep/tests/fixtures/unknown/etc/: os-release
doc/source/: conf.py  contributing.rst  index.rst  installation.rst  usage.rst
playbooks/bindep/: run.yaml
playbooks/bindep-fallback/: run.yaml
releasenotes/notes/: extend-syntax-to-support-AND-type-operation-b9736898c474bf54.yaml
