[metadata]
name = bindep
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = Binary dependency utility
description-file =
    README.rst
home-page = http://pypi.python.org/pypi/bindep
classifier = 
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    bindep

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    bindep = bindep.main:main
