[metadata]
name = bindep
summary = Binary dependency utility
description-file =
    README.rst
author = OpenStack Developer Community
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/infra/bindep
classifier = 
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
    Topic :: System :: Archiving :: Packaging
    Topic :: Utilities

[files]
packages =
    bindep

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    bindep = bindep.main:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
